# KlipperAI-OS

./: .dockerignore  .gitignore  Dockerfile.api  Dockerfile.web  README.md  deploy_chat_widget.ps1  docker-compose.yml  pyproject.toml
.github/workflows/: build-image.yml  build-minimal-iso.yml
ai-chat/: knowledge_base.py  rag_config.py  server.py  test_chat.py
ai-chat/data/: klipper_kb.jsonl
ai-chat/models/: Modelfile  README-DEPLOY.md
ai-chat/static/: index.html  widget.js
ai-monitor/: __init__.py  adaptive_print.py  adaptive_thresholds.py  autonomous_recovery.py  bambu_client.py  bambu_config.py  bambu_frame_capture.py  bed_level_analyzer.py  calibration_orchestrator.py  config_manager.py  extruder_monitor.py  flow_guard.py  frame_capture.py  heater_analyzer.py  multi_printer_monitor.py  notification_manager.py  predictive_maintenance.py  print_monitor.py  printer_adapter.py  resource_manager.py  spaghetti_detect.py  trend_analyzer.py
config/: ollama-profiles.yml
config/crowsnest/: crowsnest.conf
config/klipper/: ender3.cfg  ender3v2.cfg  generic.cfg  kos_auto_calibrate.cfg  kos_bed_level.cfg  kos_flowguard.cfg  kos_flowguard_lowram.cfg  kos_plr.cfg  kos_rewind.cfg  kos_smart_print.cfg  voron.cfg
config/klipperscreen/: KlipperScreen.conf
config/logrotate/: klipperos
config/mainsail/: nginx.conf
config/moonraker/: moonraker.conf
config/nginx/: mainsail
config/sudoers.d/: kos-bambu-monitor
config/systemd/: klipperos-ai-monitor.service  kos-ai-chat.service  kos-api.service  kos-bambu-monitor.service  kos-dashboard.service  kos-oobe.service  kos-os-tuning.service  kos-resource-manager.service  kos-zram.service
config/systemd/memory-limits/: ai-monitor.conf  crowsnest.conf  klipper.conf  klipperscreen.conf  nginx.conf
config/systemd/memory-limits-lowram/: crowsnest.conf  klipper.conf  klipperscreen.conf  moonraker.conf  nginx.conf
data/: boards.json
docker/: .env.example  nginx.conf
docs/: debian-live-build-github-actions-guide.md
docs/plans/: 2026-03-01-klipperai-os-image-builder-design.md  2026-03-01-klipperai-os-image-builder-implementation.md  2026-03-01-klipperos-ai-design.md  2026-03-01-klipperos-ai-v2-design.md  2026-03-01-klipperos-ai-v2-implementation.md  2026-03-01-klipperos-ai-v2.1-design.md  2026-03-01-klipperos-ai-v2.1-implementation.md  2026-03-03-klipperos-ai-v5-roadmap.md  2026-03-03-minimal-iso-tui-installer-design.md  2026-03-03-minimal-iso-tui-installer.md  2026-03-03-v3-fastapi-backend.md  2026-03-04-bed-level-ecosystem-design.md  2026-03-04-bed-level-implementation.md  2026-03-05-gcode-macro-improvements-design.md  2026-03-05-gcode-macro-improvements-implementation.md
image-builder/: build-image.sh  build-minimal-image.sh  build-netinstall-image.sh  chroot-setup.sh  first-boot-wizard.sh  release-notes.md
image-builder/autoinstall/: user-data
image-builder/config/bootloaders/grub/: grub.cfg
image-builder/config/hooks/live/: 0100-setup.hook.chroot
image-builder/config/includes.chroot/etc/systemd/system/: klipperai-first-boot.service  (+1 more)
image-builder/config/package-lists/: klipperos-deferred.list  klipperos.list.chroot
ks-panels/: kos_ai_chat.py  kos_ai_settings.py  kos_backup_panel.py  kos_logs.py  kos_mcu_panel.py  kos_network.py  kos_power.py  kos_services.py  kos_setup_wizard.py  kos_sysinfo.py  kos_system_api.py  kos_tailscale.py  kos_terminal.py  kos_updates.py
patches/: anomaly_detect_patch.py
scripts/: collect_training_frames.py  create_model.py  deploy-i7.sh  extract_video_frames.py  generate-cpu-affinity.sh  hw-detect.sh  index_knowledge_base.py  install-full.sh  install-klipper-os.sh  install-light.sh  install-standard.sh  mcu-detect.sh  prepare-i7-transfer.ps1  retrain_model.py  setup-os-tuning.sh  setup-zram.sh  test_devmode.py  test_pause.py  test_pause_v2.py  test_pause_v3.py  test_rag.py
tests/: ai_monitor_test_helpers.py  test_ai_adaptive_print.py  test_ai_os_tuning.py  test_ai_predictive.py  test_ai_recovery.py  test_ai_resource_manager.py  test_bed_level_analyzer.py  test_calibration_orchestrator.py  test_config_manager.py  test_extruder_monitor.py  test_flow_guard.py  test_gcode_parser.py  test_heater_analyzer.py  test_image_builder.py  test_kos_ai_settings.py  test_kos_backup.py  test_kos_logs.py  test_kos_mcu.py  test_kos_network.py  test_kos_services.py  test_kos_system_api.py  test_kos_tailscale.py  test_kos_terminal.py  test_kos_updates.py  test_ks_panels.py  test_notification_manager.py  test_print_monitor_auto_recal.py  test_spaghetti_detect.py  test_trend_analyzer.py
tests/test_api/: conftest.py  test_auth_router.py  test_control_router.py  test_db.py  test_files_router.py  test_flowguard_router.py  test_integration.py  test_models.py  test_moonraker_client.py  test_printer_router.py  test_system_router.py  test_ws.py
tests/test_installer/: test_app.py  test_disk_install.py  test_hw_detect.py  test_installers.py  test_network.py  test_profiles.py  test_steps.py  test_tui.py  test_utils.py
tools/: debug-dns.py  kos_agent.py  kos_backup.py  kos_calibrate.py  kos_dashboard.py  kos_firstrun.py  kos_mcu.py  kos_oobe.py  kos_plr.py  kos_profile.py  kos_recovery.py  kos_remote_inference.py  kos_rewind.py  kos_service_optimizer.py  kos_update.py  qemu-debug-squashfs.py  qemu-direct-boot.bat  qemu-direct-boot.ps1  qemu-e2e-test.py  qemu-setup.ps1  qemu-test-bios.bat  qemu-test-reboot.bat  qemu-test-wsl.sh  qemu-test.bat  remaster-iso-serial.sh
web/chat/: index.html
