[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "klipperos-ai"
version = "3.0.0"
description = "AI-powered Klipper 3D printer Linux distribution tools"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.11"
authors = [
    {name = "Zaman Huseyinli"},
]

dependencies = [
    "requests>=2.28",
    "numpy>=1.21",
    "Pillow>=9.0",
]

[project.optional-dependencies]
ai = [
    "onnxruntime>=1.16",
    "opencv-python-headless>=4.5",
]
ai-tflite = [
    "tflite-runtime>=2.11",
    "opencv-python-headless>=4.5",
]
dashboard = [
    "rich>=13.0",
    "psutil>=5.9",
]
agent = [
    "psutil>=5.9",
    "pyyaml>=6.0",
    "requests>=2.28",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-jose[cryptography]>=3.3",
    "websockets>=12.0",
    "httpx>=0.27",
    "psutil>=5.9",
]
bambu = [
    "paho-mqtt>=1.6",
]
full = [
    "klipperos-ai[ai,dashboard,agent,api,bambu]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.scripts]
kos-profile = "tools.kos_profile:main"
kos-update = "tools.kos_update:main"
kos-backup = "tools.kos_backup:main"
kos-mcu = "tools.kos_mcu:main"
kos-plr = "tools.kos_plr:main"
kos-rewind = "tools.kos_rewind:main"
kos-calibrate = "tools.kos_calibrate:main"
kos-service-optimizer = "tools.kos_service_optimizer:main"
kos-remote = "tools.kos_remote_inference:main"
kos-recovery = "tools.kos_recovery:main"
kos-firstrun = "tools.kos_firstrun:main"
kos-dashboard = "tools.kos_dashboard:main"
kos-agent = "tools.kos_agent:main"
kos-api = "packages.api.main:main"
kos-install = "packages.installer.__main__:main"
kos-oobe = "tools.kos_oobe:main"
kos-bambu-monitor = "ai-monitor.multi_printer_monitor:main"

[tool.setuptools.packages.find]
include = ["tools*", "ai-monitor*", "ks-panels*", "packages*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
